--- a/templates/templatesapp/userRegistration.html
+++ b/templates/templatesapp/userRegistration.html
@@ -7,7 +7,7 @@
 <body>
     <h1>User Registration</h1>
     <form method="post">
-        {{form.as_p}}
+        {{form.as_table}}
         {% csrf_token %}
         <button type="submit">Submit</button>
     </form>
